generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ─── Enums ───────────────────────────────────────────────────────────────────

enum Role {
  ADMIN
  GERENTE
  OPERADOR
}

enum ProductCategory {
  COMIDA
  BEBIDA
}

enum TableStatus {
  OPEN
  OCCUPIED
  CLOSED
}

enum OrderStatus {
  OPEN
  CLOSED
}

enum ItemStatus {
  PENDENTE
  EM_PREPARO
  PRONTO
  ENTREGUE
}

// ─── Models ──────────────────────────────────────────────────────────────────

model Company {
  id        String     @id @default(cuid())
  name      String
  createdAt DateTime   @default(now())
  users     User[]
  products  Product[]
  tables    Table[]
  customers Customer[]
  orders    Order[]
}

model User {
  id           String   @id @default(cuid())
  name         String
  email        String
  passwordHash String
  role         Role     @default(ADMIN)
  createdAt    DateTime @default(now())
  companyId    String
  company      Company  @relation(fields: [companyId], references: [id])

  @@unique([email, companyId])
}

model Product {
  id          String          @id @default(cuid())
  name        String
  description String?
  category    ProductCategory
  active      Boolean         @default(true)
  createdAt   DateTime        @default(now())
  updatedAt   DateTime        @updatedAt
  companyId   String
  company     Company         @relation(fields: [companyId], references: [id])
  orderItems  OrderItem[]
}

model Table {
  id        String      @id @default(cuid())
  code      String
  status    TableStatus @default(OPEN)
  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt
  companyId String
  company   Company     @relation(fields: [companyId], references: [id])
  orders    Order[]

  @@unique([code, companyId])
}

model Customer {
  id        String   @id @default(cuid())
  name      String
  email     String?
  phone     String?
  employer  String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  companyId String
  company   Company  @relation(fields: [companyId], references: [id])
  orders    Order[]
}

model Order {
  id         String      @id @default(cuid())
  tableId    String
  customerId String?
  status     OrderStatus @default(OPEN)
  createdAt  DateTime    @default(now())
  updatedAt  DateTime    @updatedAt
  companyId  String
  company    Company     @relation(fields: [companyId], references: [id])
  table      Table       @relation(fields: [tableId], references: [id])
  customer   Customer?   @relation(fields: [customerId], references: [id])
  items      OrderItem[]
}

model OrderItem {
  id        String     @id @default(cuid())
  orderId   String
  productId String
  quantity  Int        @default(1)
  notes     String?
  status    ItemStatus @default(PENDENTE)
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  order     Order      @relation(fields: [orderId], references: [id])
  product   Product    @relation(fields: [productId], references: [id])
}
